# RTS_GAME

./: .gitignore  CCopyDLL.cmake  CLibsDownload.cmake  CMakeLists.txt  settings.json
GameAI/: CMakeLists.txt
GameApi/: CMakeLists.txt
GameApi/include/: message.proto
GameApi/include/GameApi/: BasicString.cpp  BasicString.h  Char8TStringLiteral.h  Compiler.cpp  Compiler.h  Config.h.in  Externalsstream.cpp  Externalsstream.h  GlobalLogSource.cpp  GlobalLogSource.h  HashCombine.h  IsBaseOfTemplate.h  IsInstance.h  LogLevel.cpp  LogLevel.h  LogSink.cpp  LogSink.hpp  LogSource.cpp  LogSource.h  Message.cpp  Message.h  MessageCreator.cpp  MessageCreator.h  SGBase.h  SetterEmitterF.h  SetterEmitterP.h  SetterGetter.h  SetterGetterF.h  SetterGetterP.h  Signal.h  StringFormatter.cpp  StringFormatter.h  TQueue.h  ThreadId.cpp  ThreadId.h  Version.cpp  Version.h  function_traits.h  has_field.h  overload.h  (+1 more)
GameApi/include/GameApi/Sink/: OSLogSink.h  OsLogSink.cpp
GameApi/include/GameApi/Synchronized/: BaseSynchronized.h  Lock.h  Synchronized.h
GameApi/include/Yaml/: CMakeLists.txt  Document.cpp  Document.h  Emitter.cpp  Emitter.h
GameApi/include/Yaml/Node/: EmitterStyle.h  Node.cpp  Node.h  Node.inl  NodeIterator.cpp  NodeIterator.h  NodeType.h  convert.cpp  convert.h
GameClient/: CMakeLists.txt
GameClient/include/GameClient/: Argv_options.cpp  Argv_options.h  ContactListener.cpp  ContactListener.h  FontLoader.cpp  FontLoader.h  GameLoop.cpp  GameLoop.h  GameObjectDatabase.cpp  GameObjectDatabase.h  GarbageCollector.cpp  GarbageCollector.h  GlobalStaticVariables.cpp  GlobalStaticVariables.h  GuidFileIdPack.h  IconsFontAwesome5_c.h  Initializer.cpp  Initializer.h  MainThread.cpp  MainThread.h  MainWindow.cpp  MainWindow.h  MetaData.cpp  MetaData.h  MetaData.inl  Performance.cpp  Performance.h  SceneLoader.cpp  SceneLoader.h  TPtr.h  TPtr.inl  WindowLayout.cpp  WindowLayout.h  icon.h  icon.rc  icona.rc  imgui_custom.cpp  imgui_custom.h  main.cpp
GameClient/include/GameClient/Components/: AiEnemy.cpp  AiEnemy.h  AttackShip.cpp  AttackShip.h  Base.cpp  Base.h  Building.cpp  Building.h  Bullet.cpp  Bullet.h  Emitter.cpp  Enemy.cpp  Enemy.h  GenerateWorld.cpp  MenuPlayGame.cpp  Pause.cpp  Pause.h  Placer.cpp  Placer.h  PrefabFunc.cpp  PrefabFunc.h  Resource.cpp  Resource.h  ResourcePoint.cpp  ResourcePoint.h  ResourceShip.cpp  ResourceShip.h  SettingsGameWindow.cpp  Ship.cpp  Ship.h  ShipAi.cpp  ShipAi.h  ShipDummy.cpp  ShipDummy.h  ShipType.cpp  ShipType.h  SmartCamera.cpp  TextCenter.cpp  TextCenter.h  UserControls.cpp  (+5 more)
GameClient/include/GameClient/Components/AttackShipStateMachine/: AttackState.cpp  AttackState.h  Attacked.cpp  Attacked.h  Event.h  FleeState.cpp  FleeState.h  GoToState.cpp  GoToState.h  Patrol.cpp  Patrol.h  WaitState.cpp  WaitState.h
GameClient/include/GameClient/Components/Life/: Attack.cpp  Attack.h  Life.cpp  Life.h
GameClient/include/GameClient/Components/Network/: FullSynchronizer.cpp  FullSynchronizer.h  NetworkInterface.cpp  NetworkInterface.h  SignalSynchronizer.cpp  SignalSynchronizer.h  Synchronizer.cpp  Synchronizer.h
GameClient/include/GameClient/Components/ResourceShipStateMachine/: AttackState.cpp  AttackState.h  Event.h  FleeState.cpp  FleeState.h  GatheringResourceState.cpp  GatheringResourceState.h  GoToState.cpp  GoToState.h  TransportState.cpp  TransportState.h  WaitState.cpp  WaitState.h
GameClient/include/GameClient/Editor/: BasicLayout.cpp  BasicLayout.h
GameClient/include/GameClient/Editors/: CameraEditor.cpp  GameObjectEditor.cpp  ObjectEditor.cpp  SpriteEditor.cpp  TextEditor.cpp  TextureEditor.cpp  TextureImporterEditor.cpp  TransformEditor.cpp
GameClient/include/GameClient/Importers/: AudioImporter.cpp  AudioImporter.h  DefaultImporter.cpp  DirImporter.cpp  ShaderImporter.cpp  TextScriptImporter.cpp  TextureImporter.cpp  TextureImporter.h  TrueTypeFontImporter.cpp
GameClient/include/GameClient/Unity/: Macro.h  StateMachine.hpp  forEachMacro.h
GameClient/include/GameClient/Unity/Audio/: AudioClip.cpp  AudioClip.h  AudioListener.cpp  AudioListener.h  AudioSource.cpp  AudioSource.h
GameClient/include/GameClient/Unity/Core/: Application.cpp  Application.h  Attributes.cpp  Attributes.h  Behaviour.cpp  Behaviour.h  Camera.cpp  Camera.h  Component.cpp  Component.h  Component.inl  GameObject.cpp  GameObject.h  GameObject.inl  Guid.cpp  Guid.h  MonoBehaviour.cpp  MonoBehaviour.h  Object.cpp  Object.h  Quaternion.cpp  Quaternion.h  Renderer.cpp  Renderer.h  ScriptableObject.cpp  ScriptableObject.h  Sprite.cpp  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h  TextAsset.cpp  TextAsset.h  Texture2D.cpp  Texture2D.h  Time.cpp  Time.h  Transform.cpp  Transform.h
GameClient/include/GameClient/Unity/Editor/: Application.cpp  Application.h  AssetDatabase.cpp  AssetDatabase.h  AssetImportContext.cpp  AssetImportContext.h  AssetImporter.cpp  AssetImporter.h  AssetImporterEditor.cpp  AssetImporterEditor.h  AssetPreview.cpp  AssetPreview.h  ContextMenu.cpp  ContextMenu.h  DragAndDrop.cpp  DragAndDrop.h  Editor.cpp  Editor.h  EditorApplication.cpp  EditorApplication.h  EditorGuiLayout.cpp  (+18 more)
GameClient/include/GameClient/Windows/: About.cpp  About.h  AssetWindow.cpp  AssetWindow.h  DemoWindow.cpp  DragDropWindow.cpp  DragDropWindow.h  FileDialogWindow.cpp  FileDialogWindow.h  GameSceneMenuGizmo.cpp  GameSceneMenuGizmo.h  GameWindow.cpp  HierarchyWindow.cpp  Inspector.cpp  Inspector.h  Metrics.cpp  NewScene.cpp  PerformanceWindow.cpp  SceneWindow.cpp  SceneWindow.h  Style.cpp
GameClient/include/GameClient/box2d/: b2_user_settings.cpp  b2_user_settings.h
GameServer/: CMakeLists.txt
GameViewer/: CMakeLists.txt  main.cpp
ImGui/: CMakeLists.txt  imconfig.h  imgui-SFML.cpp  imgui-SFML.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_stdlib.cpp  imgui_stdlib.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_textedit.h  imstb_truetype.h
tests/: ArgvOptions.cpp  AssetDatabase.cpp  CMakeLists.txt  EmitterTest.cpp  JsonSerializer.cpp  NodeBasic.cpp  ObjectFactorySerialization.cpp  Signal.cpp  TPtr.cpp  main.cpp
(+59 files in other folders)
